--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,19 +1,37 @@
 body {
-    background-color: black;
+  background-color: black;
+  text-align: center;
 }
 
 h1 {
   color: white;  
-  font-family: verdana;
+  font-family: Verdana;
   font-weight: normal;
-  font-size: 50px;
-  text-align: center;
+  font-size: 50px;  
+}
+
+p {
+  color: gray;
+  font-size: 21px;
+  font-family: Verdana;
 }
  
 .link a {
-    color: aquamarine;
-    font-size: 16px;
-    text-align: center;
-    display: block;
+  color: aquamarine;
+  font-size: 16px;
+  text-align: center;
+  display: block;
+  margin-bottom: 25px;
+}
 
+.cellVideo {
+  display: block;
+  text-align: center;
+}
+
+.sectionHeader {
+  color: white;
+  font-family: Verdana;
+  font-weight: 300;
+  font-size: 42px;
 }
